# WatchdogX

./: CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  config.example.yaml  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: agent_development.md  api_reference.md  architecture.md  best_practices.md  deployment.md
examples/: basic_workflow.py  custom_agent.py  kubernetes_monitor.py  slack_integration.py
src/watchdogx/: __init__.py  cli.py  config.py  exceptions.py  logging_config.py  orchestrator.py
src/watchdogx/agents/: __init__.py  diagnosis_agent.py  executor_agent.py  monitor_agent.py  verify_agent.py
src/watchdogx/core/: __init__.py  agent.py  llm_client.py  memory.py  tools.py
src/watchdogx/tools/: __init__.py  http_checker.py  log_collector.py  metrics_scraper.py  shell_executor.py
